--- a/compose/home-hub/home-page.yml
+++ b/compose/home-hub/home-page.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - 80:3000
     volumes:
-      - .config/homepage:/app/config 
+      - ./config/homepage:/app/config 
     restart: unless-stopped
