--- a/compose/home-hub/config/homepage/services.yaml
+++ b/compose/home-hub/config/homepage/services.yaml
@@ -1,10 +1,12 @@
-- glances:
-    version: 4 # required only if running glances v4 or higher, defaults to 3
-    cpu: true # optional, enabled by default, disable by setting to false
-    mem: true # optional, enabled by default, disable by setting to false
-    cputemp: true # disabled by default
-    uptime: true # disabled by default
-    disk: / # disabled by default, use mount point of disk(s) in glances. Can also be a list (see below)
+- resources:
+    cpu: true
+    memory: true
+    disk: /
+    cputemp: true
+    tempmin: 0 # optional, minimum cpu temp
+    tempmax: 100 # optional, maximum cpu temp
+    uptime: true
+    units: metric # only used by cpu temp, options: 'imperial' or 'metric'
+    refresh: 3000 # optional, in ms
     diskUnits: bytes # optional, bytes (default) or bbytes. Only applies to disk
-    expanded: true # show the expanded view
-    label: Home Hub # optional
+    network: true # optional, uses 'default' if true or specify a network interface name
