--- a/compose/home-hub/proxy.yml
+++ b/compose/home-hub/proxy.yml
@@ -1,6 +1,7 @@
 services:
   proxy-manager:
     image: 'jc21/nginx-proxy-manager:latest'
+    container_name: proxy-manager
     restart: unless-stopped
     ports:
       - '80:80' # Public HTTP Port
