--- a/compose/home-hub/config/homepage/bookmarks.yaml
+++ b/compose/home-hub/config/homepage/bookmarks.yaml
@@ -1,1 +1,15 @@
+---
+- "":
+    - Github:
+        - icon: github.png
+          href: https://github.com/
 
+- "":
+    - Reddit:
+        - icon: reddit.png
+          href: https://reddit.com/
+
+- "":
+    - YouTube:
+        - icon: youtube.png
+          href: https://youtube.com/
