fix: adding ports to ntp

--- a/compose/home-hub/ntp.yml
+++ b/compose/home-hub/ntp.yml
@@ -5,4 +5,6 @@ services:
     environment:
       NTP_SERVERS: "time1.google.com,time2.google.com"
     restart: always
-    network_mode: host
+    ports:
+      - 123:123/udp
+    restart: always
