testing config maps

--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./docker/homepage/config:/app/config 
+      - ./config:/app/config 
     restart: unless-stopped
