--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -9,4 +9,6 @@ services:
       - 3000:3000
     volumes:
       - ./config:/app/config 
+    env_file:
+      - stack.env
     restart: unless-stopped
