make readonly test

--- a/docker/homepage/docker-compose.yml
+++ b/docker/homepage/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./config:/app/config 
+      - ./config:/app/config:ro 
     env_file:
       - stack.env
     
