--- a/docker/homepage/config/services.yaml
+++ b/docker/homepage/config/services.yaml
@@ -36,6 +36,9 @@
       icon: home-assistant.png
       href: http://homeassistant.homelab.int
       description: Home Automation
-
+  - Home Assistant:
+      icon: home-assistant.png
+      href: http://homeassistant.homelab.int
+      description: Home Automation
 
 
