--- a/docker/homepage/config/services.yaml
+++ b/docker/homepage/config/services.yaml
@@ -37,5 +37,12 @@
       href: http://homeassistant.homelab.int
       description: Home Automation
 
+  - Home Assistant:
+      icon: home-assistant.png
+      href: http://homeassistant.homelab.int
+      description: Home Automation
+
+
+
 
 
