change role to also include node to leave netwrok after drain and removed from managers

--- a/ansible/docker-swarm/destroy/destroy-docker-swarm.yml
+++ b/ansible/docker-swarm/destroy/destroy-docker-swarm.yml
@@ -14,8 +14,8 @@
     - remove_workers
       
 - name: remove managers
-  hosts: manager
+  hosts: cluster
   become: true
   ignore_errors: yes
   roles:
-    - remove_managers
+    - leave_swarm
