bring down cluster and clean up

--- a/ansible/docker-swarm/create/create-docker-swarm.yml
+++ b/ansible/docker-swarm/create/create-docker-swarm.yml
@@ -23,3 +23,9 @@
   become: true
   roles:
     - join_workers
+
+- name: Deploy Portainer
+  hosts: manager[0]
+  become: true
+  roles:
+    - deploy_portainer
