--- a/ansible/docker-swarm/destroy/destroy-docker-swarm.yml
+++ b/ansible/docker-swarm/destroy/destroy-docker-swarm.yml
@@ -1,21 +1,36 @@
 ---
-- name: Stop All Services
-  hosts: manager[0]
-  become: true
-  ignore_errors: yes
-  roles:
-    - stop_services
+# - name: Stop All Services
+#   hosts: manager[0]
+#   become: true
+#   ignore_errors: yes
+#   roles:
+#     - stop_services
 
-- name: remove workers
-  hosts: manager[0]
-  become: true
-  ignore_errors: yes
-  roles:
-    - remove_workers
+# - name: remove workers
+#   hosts: manager[0]
+#   become: true
+#   ignore_errors: yes
+#   roles:
+#     - remove_workers
       
-- name: remove managers
-  hosts: cluster
+- name: leave swarm
+  hosts: docker
   become: true
   ignore_errors: yes
   roles:
     - leave_swarm
+
+# - name: leave swarm
+#   hosts: manager
+#   order: reverse_inventory
+#   become: true
+#   ignore_errors: yes
+#   roles:
+#     - leave_swarm
+
+- name: clean docker
+  hosts: cluster
+  become: true
+  ignore_errors: yes
+  roles:
+    - docker_clean_up
