--- a/ansible/docker-swarm/destroy/destroy-docker-swarm.yml
+++ b/ansible/docker-swarm/destroy/destroy-docker-swarm.yml
@@ -1,17 +1,17 @@
 ---
-# - name: Stop All Services
-#   hosts: manager[0]
-#   become: true
-#   ignore_errors: yes
-#   roles:
-#     - stop_services
+- name: Stop All Services
+  hosts: manager[0]
+  become: true
+  ignore_errors: yes
+  roles:
+    - stop_services
 
-# - name: remove workers
-#   hosts: manager[0]
-#   become: true
-#   ignore_errors: yes
-#   roles:
-#     - remove_workers
+- name: remove workers
+  hosts: manager[0]
+  become: true
+  ignore_errors: yes
+  roles:
+    - remove_workers
       
 - name: leave swarm
   hosts: docker
@@ -20,13 +20,13 @@
   roles:
     - leave_swarm
 
-# - name: leave swarm
-#   hosts: manager
-#   order: reverse_inventory
-#   become: true
-#   ignore_errors: yes
-#   roles:
-#     - leave_swarm
+- name: leave swarm
+  hosts: manager
+  order: reverse_inventory
+  become: true
+  ignore_errors: yes
+  roles:
+    - leave_swarm
 
 - name: clean docker
   hosts: cluster
