--- a/ansible/inventory/01-general.yml
+++ b/ansible/inventory/01-general.yml
@@ -5,8 +5,11 @@ cluster:
 
 docker:
     hosts:
-      docker-[01:06]:
+      docker-01:
+        swarm_labels:
+          label_example: "example"
+      docker-[02:06]:
 
 manager:
-    hosts:
+    hosts:      
       manager-[01:02]:
