--- a/ansible/inventory/01-general.yml
+++ b/ansible/inventory/01-general.yml
@@ -13,3 +13,10 @@ docker:
 manager:
     hosts:      
       manager-[01:02]:
+      nfs:
+        swarm_labels:
+          zigbee: "true"
+
+cluster-support:
+  hosts:
+    nfs:
