--- a/ansible/deployments/home-assistant/roles/deploy_home_assistant/tasks/main.yml
+++ b/ansible/deployments/home-assistant/roles/deploy_home_assistant/tasks/main.yml
@@ -1,4 +1,3 @@
----
 - name: Ensure docker-compose is installed
   ansible.builtin.package:
     name: docker-compose
@@ -10,17 +9,9 @@
     state: started
     enabled: true
 
-- name: Create a NFS directory if it does not exist
+- name: Setup Home Assistant directory
   ansible.builtin.file:
-    path: /mnt/nfs/docker/portainer_data
-    state: directory
-    mode: '7777'
-    owner: nobody
-    group: nogroup
-
-- name: Setup Portainer directory
-  ansible.builtin.file:
-    path: /home/docker-compose/portainer
+    path: /home/docker-compose/home-assistant
     state: directory
     mode: '0755' 
     owner: nobody 
@@ -28,16 +19,16 @@
 
 - name: Copy compose from template to host
   ansible.builtin.template:
-    src: "../../../../../compose/portainer/docker-compose.yaml"
-    dest: "/home/docker-compose/portainer/docker-compose.yaml"
+    src: "../../../../../compose/home_assistant/docker-compose.yaml"
+    dest: "/home/docker-compose/home_assistant/docker-compose.yaml"
     mode: '0755' 
     owner: nobody 
     group: nogroup  
   notify:
-    - Start Portainer
+    - Start Home Assistant
 
-- name: Deploy Portainer stack
+- name: Deploy Home Assistant stack
   ansible.builtin.command:
-    cmd: docker stack deploy -c /home/docker-compose/portainer/docker-compose.yaml portainer
+    cmd: docker stack deploy -c /home/docker-compose/home_assistant/docker-compose.yaml home_assistant
   register: swarm_check
   changed_when: false
