feat: proxy with https
- added vars for services
- implemented docker secrets
- vars call to vaults for encypted data
- updated deploy all
- moved compose files to templates

--- a/ansible/deployments/home-assistant/roles/check_nfs/tasks/main.yml
+++ b/ansible/deployments/home-assistant/roles/check_nfs/tasks/main.yml
@@ -14,3 +14,18 @@
     mode: '0755' 
     owner: nobody 
     group: nogroup  
+
+- name: Create multiple files
+  ansible.builtin.file: 
+      path: "/mnt/nfs/docker/home_assistant/{{ item }}"
+      state: touch
+  with_items:
+    - automations.yaml
+    - scenes.yaml
+    - scripts.yaml
+
+- name: copy default configuration
+  template:
+    src: "templates/configuration.yaml.j2"
+    dest: "/mnt/nfs/docker/home_assistant/configuration.yaml"
+    force: false
