--- a/ansible/deployments/home-assistant/templates/docker-compose.yaml
+++ b/ansible/deployments/home-assistant/templates/docker-compose.yaml
@@ -7,8 +7,6 @@ services:
     networks:
       proxy:
       default:
-    ports:
-      - "8123:8123"
     volumes:
       - /mnt/nfs/docker/home_assistant:/config
       - /etc/localtime:/etc/localtime:ro
@@ -24,8 +22,16 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.homeassistant.entrypoints=web"
-        - "traefik.http.routers.homeassistant.rule=Host(`homeassistant.spudlab.xyz`)"
+        - "traefik.http.routers.homeassistant.rule=Host(`homeassistant.{{ general.domain }}`)"
+        - "traefik.http.middlewares.homeassistant-https-redirect.redirectscheme.scheme=https"
+        - "traefik.http.routers.homeassistant.middlewares=homeassistant-https-redirect"
+        - "traefik.http.routers.homeassistant-secure.entrypoints=websecure"
+        - "traefik.http.routers.homeassistant-secure.rule=Host(`homeassistant.{{ general.domain }}`)"
+        - "traefik.http.routers.homeassistant-secure.tls=true"
+        - "traefik.http.routers.homeassistant-secure.service=homeassistant"
+        - "traefik.http.routers.homeassistant-secure.tls.certresolver=letsencrypt"
         - "traefik.http.services.homeassistant.loadbalancer.server.port=8123"
+        - "traefik.http.services.homeassistant.loadbalancer.passhostheader=true"
         - "traefik.docker.network=proxy"
 
 networks:
