--- a/ansible/deployments/portainer/roles/nfs/tasks/main.yml
+++ b/ansible/deployments/portainer/roles/nfs/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 - name: Create a NFS directory if it does not exist
   ansible.builtin.file:
-    path: /mnt/nfs/docker/traefik
+    path: /mnt/nfs/docker/portainer_data
     state: directory
-    mode: '0777'
+    mode: '7777'
     owner: nobody
     group: nogroup
 
-- name: Setup traefik logs directory
+- name: Setup Portainer directory
   ansible.builtin.file:
-    path: /mnt/nfs/docker/traefik/logs
+    path: /home/docker-compose/portainer
     state: directory
-    mode: '0777' 
+    mode: '0755' 
     owner: nobody 
     group: nogroup  
