feat: add keys uses ssh key path from vars

--- a/maintenance/set-up-machine/add-keys.yml
+++ b/maintenance/set-up-machine/add-keys.yml
@@ -10,4 +10,4 @@
       ansible.posix.authorized_key:
         user: "{{ user_keys }}"
         state: present
-        key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/homelab.pub') }}"
+        key: "{{ lookup('file', lookup('env','HOME') +  public_key ) }}"
