--- a/deployments/portainer/group_vars/all.yml
+++ b/deployments/portainer/group_vars/all.yml
@@ -1,3 +1,3 @@
 ---
-secrets:
-  portainer_admin_password: "{{ vault_portainer_admin_password }}"
+secrets: # will be created into docker secrets and used in portainer service
+  portainer_admin_password: "{{ vault_portainer_admin_password }}" # Portainer admin password
