--- a/deployments/traefik/group_vars/all.yml
+++ b/deployments/traefik/group_vars/all.yml
@@ -1,4 +1,4 @@
 ---
-secrets:
-  cf_token: "{{ vault_cf_token }}"
-  cf_email: "{{ vault_cf_email }}"
+secrets: # will be created into docker secrets and used in traefik service
+  cf_token: "{{ vault_cf_token }}" # Cloudflare API token
+  cf_email: "{{ vault_cf_email }}" # Cloudflare email
