add: new service ddns and some clean up of compose files when deploying

--- a/deployments/core_cluster/deploy.yml
+++ b/deployments/core_cluster/deploy.yml
@@ -2,3 +2,4 @@
 - import_playbook: ../traefik/deploy.yml
 - import_playbook: ../portainer/deploy.yml
 - import_playbook: ../home-assistant/deploy.yml
+- import_playbook: ../ddns/deploy.yml
