--- a/deployments/home-assistant/roles/deploy_home_assistant/handlers/main.yml
+++ b/deployments/home-assistant/roles/deploy_home_assistant/handlers/main.yml
@@ -4,3 +4,7 @@
     project_src: /home/docker-compose/home_assistant
     state: present
     restarted: true
+
+- name: delete compose directory
+  ansible.builtin.command:
+    cmd: rm -rf /home/docker-compose 
