update docker compose module version

--- a/deployments/home-assistant/roles/deploy_home_assistant/handlers/main.yml
+++ b/deployments/home-assistant/roles/deploy_home_assistant/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Start Home Assistant
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: /home/docker-compose/home_assistant
     state: present
     restarted: true
