--- a/deployments/traefik/roles/deploy_traefik/handlers/main.yml
+++ b/deployments/traefik/roles/deploy_traefik/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Start Traefik
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: /home/docker-compose/traefik
     state: present
     restarted: true
