--- a/deployments/ddns/roles/deploy/handlers/main.yml
+++ b/deployments/ddns/roles/deploy/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Start DDNS 
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: /home/docker-compose/ddns
     state: present
     restarted: true
