--- a/deployments/portainer/roles/deploy/handlers/main.yml
+++ b/deployments/portainer/roles/deploy/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Start Portainer
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: /home/docker-compose/portainer
     state: present
     restarted: true
