adding cioban and blog to cluster deploy

--- a/deployments/core_cluster/deploy.yml
+++ b/deployments/core_cluster/deploy.yml
@@ -3,3 +3,5 @@
 - import_playbook: ../portainer/deploy.yml
 - import_playbook: ../home-assistant/deploy.yml
 - import_playbook: ../ddns/deploy.yml
+- import_playbook: ../blog/deploy.yml
+- import_playbook: ../cioban/deploy.yml
