--- a/deployments/home-assistant/roles/deploy_home_assistant/tasks/main.yml
+++ b/deployments/home-assistant/roles/deploy_home_assistant/tasks/main.yml
@@ -31,8 +31,6 @@
     mode: '0755'
     owner: nobody
     group: nogroup
-  notify:
-  - Start Home Assistant
 
 - name: Deploy Home Assistant stack
   ansible.builtin.command:
@@ -40,3 +38,6 @@
   register: swarm_check
   changed_when: false
 
+- name: delete compose directory
+  ansible.builtin.command:
+    cmd: rm -rf /home/docker-compose 
