--- a/deployments/core_cluster/deploy.yml
+++ b/deployments/core_cluster/deploy.yml
@@ -4,4 +4,5 @@
 - import_playbook: ../home-assistant/deploy.yml
 - import_playbook: ../ddns/deploy.yml
 - import_playbook: ../blog/deploy.yml
+- import_playbook: ../gitea/deploy.yml
 - import_playbook: ../cioban/deploy.yml
