--- a/deployments/blog/templates/docker-compose.yml
+++ b/deployments/blog/templates/docker-compose.yml
@@ -6,6 +6,10 @@ services:
       proxy:
       default:
     deploy:
+      update_config:
+        parallelism: 1
+        delay: 10s
+        order: start-first
       placement:
         constraints: [node.role == worker]
       mode: replicated
